--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,18 +1,27 @@
 name: Deploy to GitHub Pages
 
 on:
-  # 当推送到main分支时触发
+  # 当推送到master分支时触发
   push:
-    branches: [ "master" ]
+    branches: [ "master", "main" ]
+    paths-ignore:
+      - "**.md"
+      - ".gitignore"
   
   # 允许手动触发工作流
   workflow_dispatch:
+    inputs:
+      force:
+        description: '强制部署（忽略缓存）'
+        type: boolean
+        default: false
 
 # 设置GITHUB_TOKEN的权限以允许部署到GitHub Pages
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
+  deployments: write
 
 # 允许一个并发部署
 concurrency:
@@ -26,6 +35,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+        
+      - name: 设置Git用户信息
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
         
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -34,17 +50,55 @@ jobs:
           cache: 'npm'
           
       - name: Setup Pages
+        id: pages
         uses: actions/configure-pages@v4
         with:
           enablement: true
+          
+      - name: 验证Pages配置状态
+        run: |
+          echo "GitHub Pages URL: ${{ steps.pages.outputs.base_url || '未配置' }}"
+          echo "源: ${{ steps.pages.outputs.source || '未配置' }}"
+          echo "构建类型: ${{ steps.pages.outputs.build_type || '未配置' }}"
         
       - name: Install dependencies
-        run: npm ci
-        
+        run: |
+          echo "📦 安装依赖..."
+          npm ci || npm install
+          
       - name: Build
-        run: npm run build
-        
-      - name: Upload artifact
+        run: |
+          echo "🔨 开始构建..."
+          npm run build
+          echo "✅ 构建完成!"
+          
+      - name: 验证构建输出
+        run: |
+          echo "📂 验证构建输出..."
+          if [ -d "dist" ]; then
+            echo "✅ dist目录存在"
+            ls -la dist/
+            if [ -f "dist/index.html" ]; then
+              echo "✅ index.html文件存在"
+            else
+              echo "❌ index.html文件不存在!"
+              exit 1
+            fi
+          else
+            echo "❌ 构建失败，dist目录不存在!"
+            exit 1
+          fi
+          
+      # 使用JamesIves/github-pages-deploy-action作为备选部署方法
+      - name: 部署到GitHub Pages (备选方法)
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: dist
+          branch: gh-pages
+          clean: true
+          force: ${{ github.event.inputs.force == 'true' }}
+          
+      - name: Upload artifact (GitHub Actions方法)
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./dist
@@ -57,6 +111,21 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: 部署前验证
+        run: |
+          echo "🚀 准备部署到GitHub Pages..."
+          echo "分支: ${{ github.ref_name }}"
+          echo "提交: ${{ github.sha }}"
+          echo "触发方式: ${{ github.event_name }}"
+          echo "时间: $(date)"
+          
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        
+      - name: 部署完成
+        if: steps.deployment.outcome == 'success'
+        run: |
+          echo "✅ GitHub Pages部署成功!"
+          echo "🌐 网站地址: ${{ steps.deployment.outputs.page_url }}"
+          echo "⏱️ 部署时间: $(date)"
